Anasayfa kategori haberleri

--- a/HaberPortal.Web/Views/Home/Index.cshtml
+++ b/HaberPortal.Web/Views/Home/Index.cshtml
@@ -15,6 +15,12 @@
     </div>
 </div>
 <div class="icerik">
-    <div class="icerik_sol"></div>
-    <div class="icerik_sag"></div>
+    <div class="icerik_sol">
+        <div class="kategori_haberler">
+            @Html.Action("KategoriHaberler")
+        </div>
+    </div>
+    <div class="icerik_sag">
+        sag
+    </div>
 </div>
