--- a/HaberPortal.Web/Content/Site.css
+++ b/HaberPortal.Web/Content/Site.css
@@ -23,19 +23,19 @@ textarea {min-height: 75px;}
 
 /* site iskeleti
 -----------------------------------------------------------*/
-#header {background-color:#830000;}
+#header {background-color:#333;}
 #body {overflow:hidden;min-height:500px;}
-#footer {background-color:#cf0000;height:75px;}
+#footer {background-color:#000;height:75px;margin-top:10px;}
 #banner {height:100px;line-height:100px;font-size:40px;font-weight:bold;color:#fff;padding-left:20px;}
 
 /* ana menu
 -----------------------------------------------------------*/
 
-#menu {background-color:#cf0000;}
+#menu {background-color:#000;}
 #menu ul{padding:0;margin:0;}
 #menu ul li{list-style:none;display:inline-block;}
 #menu ul li a,#menu ul li a:active,#menu ul li a:visited{text-decoration:none;padding:0 5px 0 5px;height:30px;line-height:30px;display:block;color:#fff;font-weight:bold;}
-#menu ul li a:hover{background-color:#ff0000;}
+#menu ul li a:hover{background-color:#666;}
 
 /* ana sayfa
 -----------------------------------------------------------*/
@@ -70,15 +70,15 @@ a.orta_resim_linki .orta_link_text{position:absolute;width:555px;bottom:0;z-inde
 .yazar_resim img {height:50px;width:50px;}
 
 .slider {}
-.slider_nav_bar {height:30px;line-height:30px;text-align:center;background-color:#cf0000;}
+.slider_nav_bar {height:30px;line-height:30px;text-align:center;background-color:#000;}
 .slider_nav_bar .nav_bar_button {width:25px;float:left;border-right:1px solid #fee;}
 .slider_nav_bar .nav_bar_button a {font-weight:bold;color:#fff;display:block;width:100%;height:100%;}
-.slider_nav_bar .nav_bar_button a:hover {background-color:#ff0000;}
-.slider_nav_bar .nav_bar_button a.aktif {background-color:#ff0000;}
+.slider_nav_bar .nav_bar_button a:hover {background-color:#666;}
+.slider_nav_bar .nav_bar_button a.aktif {background-color:#666;}
 
 .icerik {}
-.icerik_sol {width:760px;float:left;padding:5px 0 5px 5px;}
-.icerik_sag {width:200px;float:left;padding:5px 5px 5px 0;}
+.icerik_sol {width:735px;float:left;}
+.icerik_sag {width:240px;float:right;}
 
 .haber_detay {margin:5px 0 10px 0;overflow:hidden;}
 .haber_detay .haber_detay_icerik{width:620px;float:left;background-color:#fee;}
@@ -99,5 +99,13 @@ a.orta_resim_linki .orta_link_text{position:absolute;width:555px;bottom:0;z-inde
 .yazar_detay .yazar_detay_ad{float:left;padding:10px;font-weight:bold;}
 .yazar_detay .yazar_detay_eposta {padding:10px 0 10px 0;font-weight:normal;font-size:12px;}
 
+.icerik_sol .kategori_haberler {overflow:hidden;color:#fff;}
+.icerik_sol .kategori_haberler .kategoriler{clear:both;min-height:200px;overflow:hidden;margin:0 0 10px 0;background-color:#333;padding-bottom:10px;}
+.icerik_sol .kategori_haberler .kategoriler .kategroi_ad{padding:15px 20px 10px 10px;font-weight:bold;border-bottom:1px solid #ccc;margin:0 10px 0 10px;}
+.icerik_sol .kategori_haberler .kategoriler .haber{width:170px;float:left;padding:10px 0 10px 10px;}
+a.kategori_haber_link{display:block;color:#fff;font-size:12px;font-weight:bold;}
+a.kategori_haber_link img {width:100%;height:100px;border:1px solid #fff;}
+a.kategori_haber_link .haber_baslik {padding:5px 0 5px 0;line-height:14px;color:#ccc;}
+a.kategori_haber_link .haber_aciklama {padding:0 0 5px 0;height:70px;overflow:hidden;font-weight:normal;line-height:15px;}
 
 
