--- a/HaberPortal.Web/Views/Home/Index.cshtml
+++ b/HaberPortal.Web/Views/Home/Index.cshtml
@@ -21,6 +21,8 @@
         </div>
     </div>
     <div class="icerik_sag">
-        sag
+        <div class="en_cok_okunanlar">
+            @Html.Action("EnCokOkunanHaberler")
+        </div>
     </div>
 </div>
