--- a/HaberPortal.Web/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/HaberPortal.Web/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -7,8 +7,8 @@
     @Styles.Render("~/Content/Reset/css")
     @Styles.Render("~/Admin/Content/css")
     @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/modernizr")
     @RenderSection("scripts", required: false)
+    @Scripts.Render("~/bundles/modernizr")
 
     <link href="@Url.Content("~/Content/chosen-master/chosen/chosen.css")" rel="stylesheet" />
     <script src="@Url.Content("~/Content/chosen-master/chosen/chosen.jquery.min.js")"></script>
@@ -17,7 +17,8 @@
     <link href="@Url.Content("~/Content/JqueryEasyUi.1.3.2/themes/bootstrap/easyui.css")" rel="stylesheet" />
     <link href="@Url.Content("~/Content/JqueryEasyUi.1.3.2/themes/icon.css")" rel="stylesheet" />
     <script src="@Url.Content("~/Content/tinymce/js/tinymce/tinymce.min.js")"></script>
-
+    <script src="@Url.Content("~/Scripts/jquery-migrate-1.1.1.min.js")"></script>
+    
     <script type="text/javascript">
         var app_root = '@Url.Content("~/")';
     </script>
