--- a/HaberPortal.Web/Content/Site.css
+++ b/HaberPortal.Web/Content/Site.css
@@ -108,9 +108,11 @@ a.orta_resim_linki .orta_link_text{position:absolute;width:555px;bottom:0;z-inde
 .yazar_detay .yazar_detay_eposta {padding:10px 0 10px 0;font-weight:normal;font-size:12px;}
 
 .icerik_sol .kategori_haberler {overflow:hidden;color:#fff;}
-.icerik_sol .kategori_haberler .kategoriler{clear:both;min-height:200px;overflow:hidden;margin:0 0 5px 0;background-color:#333;padding-bottom:10px;}
-.icerik_sol .kategori_haberler .kategoriler .kategroi_ad{padding:15px 20px 10px 10px;font-weight:bold;border-bottom:1px solid #ccc;margin:0 10px 0 10px;}
-.icerik_sol .kategori_haberler .kategoriler .haber{width:170px;float:left;padding:10px 0 10px 10px;}
+
+.kategoriler {clear:both;min-height:200px;overflow:hidden;margin:0 0 5px 0;background-color:#333;padding-bottom:10px;}
+.kategoriler .kategroi_ad{padding:15px 20px 10px 10px;font-weight:bold;border-bottom:1px solid #ccc;margin:0 10px 0 10px;}
+.kategoriler .haber{width:170px;float:left;padding:10px 0 10px 10px;}
+
 a.kategori_haber_link{display:block;color:#fff;font-size:12px;font-weight:bold;}
 a.kategori_haber_link img {width:100%;height:100px;border:1px solid #fff;}
 a.kategori_haber_link .haber_baslik {padding:5px 0 5px 0;line-height:14px;color:#ccc;}
@@ -123,3 +125,23 @@ a.kategori_haber_link .haber_aciklama {padding:0 0 5px 0;height:70px;overflow:hi
 .en_cok_okunanlar .en_cok_okunan_resim {float:left;}
 .en_cok_okunanlar .en_cok_okunan_resim  img{width:90px;height:70px;}
 .en_cok_okunanlar .en_cok_okunan_haber_baslik {float:right;width:130px;overflow:hidden;}
+
+.kategori_detay {}
+.kategori_detay_sol {width:735px;float:left;margin-top:5px;}
+.kategori_detay_sag {width:240px;float:right;margin-top:5px;}
+.kategori_detay .slider {}
+.kategori_detay .icerik {}
+
+.kategori_detay .slider_navbar{width:100px;float:left;}
+.kategori_detay .slider_icerik{width:630px;float:right;}
+
+.kategori_detay .slider_navbar_button{display:block;height:70px;margin-bottom:5px;}
+.kategori_detay .kategori_detay_resim_linki {display:block;}
+.kategori_detay .slider_navbar_button .kategori_detay_resim_linki:hover {border-left:7px solid #000;height:70px;}
+.kategori_detay .slider_icerik .kategori_detay_resim_linki {position:relative;height:370px;}
+.kategori_detay .kategori_detay_resim_linki img {width:100%;height:100%;}
+.kategori_detay .slider_resim_tutucu{height:370px;}
+
+.kategori_detay_link_text_bg {position:absolute;width:630px;height:80px;bottom:0;background-color:#000;opacity: 0.5;filter: alpha(opacity=50);}
+.kategori_detay_link_text {position:absolute;width:625px;bottom:0;z-index:10;padding:0 5px 0 5px;color:#fff;height:70px;overflow:hidden;font-weight:bold;font-size:20px;}
+
