--- a/HaberPortal.Web/Views/Home/HaberDetay.cshtml
+++ b/HaberPortal.Web/Views/Home/HaberDetay.cshtml
@@ -16,12 +16,12 @@
                 @Html.Label("Yayınlanma Tarihi") : 
             @Model.YayinlanmaTarihi.Value.ToString("d MMMM yyyy - HH:mm")
             </div>
-            <div class="detay_aciklama">
+            <article class="detay_aciklama">
                 @Html.DisplayFor(model => model.Aciklama)
-            </div>
-            <div class="detay_icerik">
+            </article>
+            <article class="detay_icerik">
                 @Html.Raw(Model.Icerik)
-            </div>
+            </article>
         </div>
     </div>
     <div class="haber_detay_sag_menu">
