--- a/HaberPortal.Web/Views/Shared/_Layout.cshtml
+++ b/HaberPortal.Web/Views/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
 <body>
     <header id="header">
         <div id="banner">
-            @Html.ActionLink("HABER PORTAL", "Index")
+            @Html.ActionLink("HABER PORTAL", "Index","Home")
         </div>
         <nav id="menu">
             @Html.Action("AnaMenu", "Home")
