--- a/HaberPortal.Web/Views/Kategori/KategoriDetay.cshtml
+++ b/HaberPortal.Web/Views/Kategori/KategoriDetay.cshtml
@@ -67,7 +67,7 @@
     </aside>
     <aside class="kategori_detay_sag">
         <div class="en_cok_okunanlar">
-            <div class="en_cok_okunan_baslik">@Model.Ad.ToUpper() ÇOK OKUNAN</div>
+            <div class="en_cok_okunan_baslik">@Model.Ad.ToUpper() EN ÇOK OKUNAN</div>
             @foreach (var haber in enCokOkunanlar)
             {
                 <div class="en_cok_okunan_haber">
